--- a/index.html
+++ b/index.html
@@ -27,41 +27,35 @@
             <img src="#" alt="hero image">
         </div>
     </div>
-    <div class="block one">
+    <div class="section one">
         <h1> Some Random Information</h1>
         <div class="block">
             <div class="card">
                 <div class="square"></div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
-        </div>
-        <div class="block">
             <div class="card">
                 <div class="square"></div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
-        </div>
-        <div class="block">
             <div class="card">
                 <div class="square"></div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
-        </div>
-        <div class="block">
             <div class="card">
                 <div class="square"></div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
         </div>
     </div>
-    <div class="block two">
+    <div class="section two">
         <h1>
             This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, 
             or maybe people will actually read it. Who knows? All I know is that it looks nice.
         </h1>
         <h2>-Thor, God of Thunder</h2>        
     </div>
-    <div class="block three">
+    <div class="section three">
         <div class="banner">
             <div class="left">
                 <h1>Call to action! It's time!</h1>
