--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
             <button class="button">Sign Up</button>
         </div>
         <div class="right-column">
-            <img src="#" alt="hero image">
+            <img src="./img/placeholder.com-1280x720.png" alt="hero image">
         </div>
     </div>
     <div class="section one">
         <h1> Some Random Information</h1>
-        <div class="block">
+        <div class="features">
             <div class="card">
                 <div class="square"></div>
                 <p>this is some subtext under an illustration or image</p>
